# kalshi_aws

./: .gitignore  README.md  ingest.sh  ingest_jobs_ec2.py  ingest_jobs_local.py  ingest_shards_ec2.py  pyproject.toml  requirements.txt
src/kalshi_ingest/: __init__.py  worker.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh.tmpl  variables.tf
